dataset1235/2025-2/805158916/users/2488736387/executions/2118643220_3306861601.log
== SUBMISSION (2025-09-01 15:17:16)
-- CODE: 
from math import lado
from math import pi
# faça seu código aqui!
area = float(9/2 * lado * apotema)
apotema = float(lado/2*tan.pi/9)
print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:17:36)
-- CODE: 
from math import pi

# faça seu código aqui!
area = float(9/2 * lado * apotema)
apotema = float(lado/2*tan.pi/9)
print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = float(9/2 * lado * apotema)
                       ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = float(9/2 * lado * apotema)
                       ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = float(9/2 * lado * apotema)
                       ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = float(9/2 * lado * apotema)
                       ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = float(9/2 * lado * apotema)
                       ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = float(9/2 * lado * apotema)
                       ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:43:56)
-- CODE: 
from math import pi
from math import tan
lado = float(input())
apotema = lado/( 2 * tan(pi/9))
area= 9/2*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
55.64
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
748.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
395.64
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
222.55
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
98.91
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
154.55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:17:18)
-- CODE: 
from math import lado
from math import pi
# faça seu código aqui!
area = float(9/2 * lado * apotema)
apotema = float(lado/2*tan.pi/9)
print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:21:17)
-- CODE: 
from math import pi
from math import lado
# faça seu código aqui!
area = float(input(9/2*lado*apotema))
apotema = float(lado/2*tan(pi/9))
print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from math import lado
ImportError: cannot import name 'lado' from 'math' (unknown location)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:16:31)
-- CODE: 
from math import lado
from math import pi
# faça seu código aqui!
area = 9/2 * lado * apotema
apotema = lado/2*tan pi/9
print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
File "XXXX", line 5
    apotema = lado/2*tan pi/9
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
File "XXXX", line 5
    apotema = lado/2*tan pi/9
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
File "XXXX", line 5
    apotema = lado/2*tan pi/9
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
File "XXXX", line 5
    apotema = lado/2*tan pi/9
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
File "XXXX", line 5
    apotema = lado/2*tan pi/9
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
File "XXXX", line 5
    apotema = lado/2*tan pi/9
                         ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:39:26)
-- CODE: 
from math import pi

lado = float(input())
apotema = lado/( 2 * pi/9)
area= 9/2*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
58.01
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
779.94
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
412.53
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
232.05
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
103.13
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
161.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:25:04)
-- CODE: 
from math import pi

# faça seu código aqui!
lado = float(input())
tan_15= 2 - (3**0.5)
apotema = 6 * lado/apotema
print(round(apotema,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = 6 * lado/apotema
                       ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = 6 * lado/apotema
                       ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = 6 * lado/apotema
                       ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = 6 * lado/apotema
                       ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = 6 * lado/apotema
                       ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = 6 * lado/apotema
                       ^^^^^^^
NameError: name 'apotema' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
